--- a/MotoGP-Desktop_P9/estilo/cards.css
+++ b/MotoGP-Desktop_P9/estilo/cards.css
@@ -4,8 +4,8 @@
 /* Regla con el estilo general para las tarjetas del juego */
 /* especificidad: 002 */
 main article {
-    width: 20vw;
-    height: 20em;
+    width: 100%;     
+    height: 12em;
     position: relative;
     transform: scale(1);
     cursor: pointer;
@@ -32,6 +32,7 @@ article img {
     position: absolute;
     border-radius: 0.5em;
     background: #1C7CCC;
+    /* El color de texto (#0b1c48) se hereda del selector 'body' definido en estilo.css. */
     backface-visibility: hidden;
 }
 
